<resources>
    <string name="app_name">Android Bootcamp Bitirme Projesi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Ekle</string>

    <string name="currency_0">₺</string>
    <string name="currency_1">$</string>
    <string name="currency_2">€</string>
    <string name="currency_3">£</string>

    <string name="type_0">Gıda</string>
    <string name="type_1">Giyim</string>
    <string name="type_2">Fatura</string>
    <string name="type_3">Kira</string>
    <string name="type_4">Eğitim</string>
    <string name="type_5">Diğer</string>

    <string name="temporary_title">Expense</string>
    <string name="amount">Amount: </string>

    <string name="insert_screen_title">Harcama Ekleme Ekranı</string>
    <string name="total_sum">Toplam Harcamanız</string>
    <string name="hello">Merhaba</string>
    <string name="change_name_screen_title">Profil Ekranı</string>
    <string name="enter_name">İsminizi giriniz</string>
    <string name="man">Erkek</string>
    <string name="woman">Kadın</string>
    <string name="dont_enter_gender">Belirtmek İstemiyorum</string>
    <string name="save">Kaydet</string>
    <string name="new_user">Yeni Kullanıcı</string>
    <string name="_0_tl">0 TL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Sil</string>
    <string name="tl">TL</string>
    <string name="dollar">Dolar</string>
    <string name="euro">Euro</string>
    <string name="sterling">Sterlin</string>
    <string name="insert">Ekle</string>
    <string name="comment">Açıklama</string>
    <string name="tutar">Tutar</string>
    <string name="delete_all_expenses">Tüm Harcamaları Sil</string>
    <string name="sterling_image_description">Sterlin para birimi</string>
    <string name="euro_image_description">Euro para birimi</string>
    <string name="dollar_image_description">Dolar para birimi</string>
    <string name="TL_image_description">TL para birimi</string>
    <string name="type_image_description">Harcama türünü belirten simge</string>
    <string name="back_button_description">Geri dönme tuşu</string>

</resources>