<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="detailViewModel"
            type="com.example.androidbootcampbitirmeprojesi.detailandinsert.DetailViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".detailandinsert.ExpenseDetailFragment">

    <ImageButton
        android:id="@+id/buttonComeBack"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/purple_200"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button_description"/>

    <ImageView
        android:id="@+id/detailImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/other"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/type_image_description"/>

    <TextView
        android:id="@+id/detailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/detailImageView"/>
    <Button
        android:id="@+id/buttonDeleteExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/delete"
        android:textAllCaps="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>