<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseInsertFragment">

    <TextView
        android:id="@+id/textViewInsertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_screen_title"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Amount"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewInsertTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:hint="Harcama Türü"
        app:layout_constraintTop_toBottomOf="@id/editTextAmountLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/exposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>-->

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAmountLayout">

        <RadioButton
            android:id="@+id/radioButtonType0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_0"/>

        <RadioButton
            android:id="@+id/radioButtonType1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_1"/>

        <RadioButton
            android:id="@+id/radioButtonType2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_2"/>

        <RadioButton
            android:id="@+id/radioButtonType3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_3"/>

        <RadioButton
            android:id="@+id/radioButtonType4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_4"/>

        <RadioButton
            android:id="@+id/radioButtonType5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/type_5"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAmountLayout">

        <RadioButton
            android:id="@+id/radioButtonDollar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radioButtonEuro"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radioButtonSterling"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radioButtonTL"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewTL"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/tl"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageViewDollar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/dollar"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTL"
        app:layout_constraintStart_toStartOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageViewSterling"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/euro"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDollar"
        app:layout_constraintStart_toStartOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageViewEuro"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/sterling"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSterling"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        tools:layout_editor_absoluteX="128dp" />


    <Button
        android:id="@+id/temporaryClearAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="Tüm Harcamaları Sil"
        app:layout_constraintBottom_toTopOf="@+id/buttonExpenseInsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmountLayout" />

    <Button
        android:id="@+id/buttonExpenseInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:text="Ekle"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>